[package]
name = "minigoogle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
reqwest = "0.11.18"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"